--- a/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
+++ b/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
@@ -17,3 +17,8 @@
     background-color: rgb(231, 66, 66);    
     color: white;
 }
+
+.collection-to-show ion-chip {
+    background-color: rgb(83, 99, 170); 
+    color: white;
+}
