--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,4 +28,5 @@
       <ng-content select="[right-button]"></ng-content>
     </ion-buttons>
   </ion-toolbar>
+  <ng-content select="[additional-toolbar]"></ng-content>
 </ion-header>
