--- a/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
+++ b/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
@@ -22,3 +22,10 @@
     background-color: rgb(83, 99, 170); 
     color: white;
 }
+
+ion-chip {
+    font-size: 10px;
+    padding: 4px 6px;
+    border-radius: 5px;
+    min-height: auto;
+}
