--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,12 @@
     margin-inline: auto;
 }
 
+.version {
+    margin: 10px;
+    font-size: 10px;
+    color: gray;
+}
+
 
 @media (min-width:'1200px'){
 //     ion-menu {
