--- a/src/app/pages/admin/pages/update-products/update-products.component.html
+++ b/src/app/pages/admin/pages/update-products/update-products.component.html
@@ -7,5 +7,8 @@
 </app-header>
 
 <ion-content [fullscreen]="true">
-
+<div  *ngIf="(products$ | async)">
+      <app-product-autocomplete #productAutocomplete [products]="products"
+          (productSelected)="onProductSelected($event)"></app-product-autocomplete>
+  </div>
 </ion-content>
