checkmode for density calculator

--- a/src/app/pages/admin/pages/density-calc/density-calculator-widget/density-calculator-widget.component.html
+++ b/src/app/pages/admin/pages/density-calc/density-calculator-widget/density-calculator-widget.component.html
@@ -7,9 +7,16 @@
     </ion-select>
   </div>
   <div class="inline">
+<ng-container *ngIf="!isCheckMode">
+      <ion-input [(ngModel)]="quantityInGr" type="number" fill="outline"></ion-input><span>гр.</span>
 
-    <ion-input [(ngModel)]="quantityInGr" type="number" fill="outline"></ion-input><span>гр.</span>
-
+</ng-container>
+<ng-container *ngIf="!isCheckMode">
+  <div>
+    <span>{{calculatedGr}}</span>
+    <span>гр.</span>
   </div>
-  <div class="density-field">Щільність: {{density}} кг/м³</div>
+</ng-container>
+  </div>
+  <div class="density-field">Щільність: <ng-container *ngIf="!isCheckMode">{{density}}</ng-container><ng-container *ngIf="isCheckMode">{{presetDensity}}</ng-container> кг/м³</div>
 </div>
