--- a/src/app/pages/admin/pages/update-products/update-products.component.html
+++ b/src/app/pages/admin/pages/update-products/update-products.component.html
@@ -1,14 +1,49 @@
 <app-header>
-  <ion-back-button
-    left-button
-    defaultHref="tabs/recipies"
-  ></ion-back-button>
+  <ion-back-button left-button defaultHref="tabs/recipies"></ion-back-button>
   <span title>Редагування продуктів</span>
 </app-header>
 
 <ion-content [fullscreen]="true">
-<div  *ngIf="(products$ | async)">
-      <app-product-autocomplete #productAutocomplete [products]="products"
-          (productSelected)="onProductSelected($event)"></app-product-autocomplete>
+  <div *ngIf="(products$ | async)">
+    <app-product-autocomplete #productAutocomplete [products]="products"
+      (productSelected)="onProductSelected($event)"></app-product-autocomplete>
+
+    <div *ngIf="selectedProduct">
+      <form [formGroup]="productForm" (ngSubmit)="submit()">
+        <ion-item fill="solid">
+          <ion-label position="floating">Калорій в 100гр.</ion-label>
+          <ion-input type="tel" formControlName="calories" #calories></ion-input>
+        </ion-item>
+
+        <ion-item fill="solid">
+          <ion-label position="floating">Одиниця виміру за замовчуванням</ion-label>
+          <ion-input type="tel" formControlName="defaultUnit"></ion-input>
+          <ion-note></ion-note>
+        </ion-item>
+        <ion-item fill="solid">
+          <ion-label position="floating">Густина</ion-label>
+          <ion-input type="tel" formControlName="density"></ion-input>
+        </ion-item>
+        <ion-item fill="solid">
+          <ion-label position="floating">Грам в 1 шт.</ion-label>
+          <ion-input type="tel" formControlName="grInOneItem"></ion-input>
+        </ion-item>
+        <ion-item fill="solid">
+          <ion-label position="floating">Назва</ion-label>
+          <ion-input type="text" formControlName="name"></ion-input>
+        </ion-item>
+        <ion-item fill="solid">
+          <ion-label position="floating">Тип</ion-label>
+          <ion-input type="text" formControlName="type"></ion-input>
+          <ion-note></ion-note>
+        </ion-item>
+        <ion-item fill="solid">
+          <ion-label position="floating">Зміна кількості при приготуванні</ion-label>
+          <ion-input type="text" formControlName="sizeChangeCoef"></ion-input>
+        </ion-item>
+
+        <ion-button expand="full" [disabled]="nochanges" type="submit">Зберегти</ion-button>
+      </form>
+    </div>
   </div>
 </ion-content>
