--- a/src/app/pages/admin/pages/update-products/update-products.component.html
+++ b/src/app/pages/admin/pages/update-products/update-products.component.html
@@ -42,7 +42,7 @@
           <ion-input type="text" formControlName="sizeChangeCoef"></ion-input>
         </ion-item>
 
-        <ion-button expand="full" [disabled]="nochanges" type="submit">Зберегти</ion-button>
+        <ion-button expand="full" [disabled]="nochanges$ | async" type="submit">Зберегти</ion-button>
       </form>
     </div>
   </div>
