density calc for update product form

--- a/src/app/pages/admin/pages/density-calc/density-calculator-widget/density-calculator-widget.component.html
+++ b/src/app/pages/admin/pages/density-calc/density-calculator-widget/density-calculator-widget.component.html
@@ -11,9 +11,9 @@
       <ion-input [(ngModel)]="quantityInGr" type="number" fill="outline"></ion-input><span>гр.</span>
 
 </ng-container>
-<ng-container *ngIf="!isCheckMode">
-  <div>
-    <span>{{calculatedGr}}</span>
+<ng-container *ngIf="isCheckMode">
+  <div class="calculated-grams">
+    <span>{{calculatedGr}} </span>
     <span>гр.</span>
   </div>
 </ng-container>
