--- a/src/app/pages/admin/pages/density-calc/density-calculator-widget/density-calculator-widget.component.scss
+++ b/src/app/pages/admin/pages/density-calc/density-calculator-widget/density-calculator-widget.component.scss
@@ -10,11 +10,15 @@
     }
 }
 
-.wrapper {
-    padding: 10px;
-}
+// .wrapper {
+//     padding: 10px;
+// }
 
 .density-field {
     margin: 20px 0;
     font-size: larger;
+}
+
+.calculated-grams {
+    margin-block: 10px;
 }
