--- a/src/app/filters/components/filters/filters.component.scss
+++ b/src/app/filters/components/filters/filters.component.scss
@@ -13,7 +13,8 @@
 }
 
 .found-recipies-count {
-  font-size: 12px;
-  opacity: 0.6;
-  margin-block: 5px;
+      font-size: 14px;
+    margin-block: 5px;
+    white-space: normal;
+    text-align: center;
 }
