short recipy view rework

--- a/src/app/shared/components/add-recipy-to-no-show/add-recipy-to-no-show.component.html
+++ b/src/app/shared/components/add-recipy-to-no-show/add-recipy-to-no-show.component.html
@@ -1,4 +1,4 @@
-<ion-button [color]="buttonColor" *ngIf="currentUser && recipy" (click)="addToNoShow()" [size]="isSmall? 'small' : 'default'">
+<ion-button [color]="buttonColor" *ngIf="currentUser && recipy" (click)="addToNoShow()" [size]="isSmall? 'small' : 'default'" fill="clear" >
     <ion-icon size="small" slot="icon-only" name="heart-dislike-outline"></ion-icon>
 </ion-button>
 
