--- a/src/app/shared/components/collections-action-sheet/collections-action-sheet.component.html
+++ b/src/app/shared/components/collections-action-sheet/collections-action-sheet.component.html
@@ -1,4 +1,4 @@
-<ion-button [id]="'collections_' + recipy.id" [color]="buttonColor">
+<ion-button [id]="'collections_' + recipy.id" [color]="buttonColor" fill="clear">
     <span *ngIf="isIconPresentation">
         <ion-icon slot="icon-only" name="bookmarks-outline"></ion-icon>
     </span>
