--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
@@ -1,3 +1,8 @@
+ion-item::part(native) {
+  padding-left: 0;
+  --inner-padding-end: 0;
+}
+
 ion-card {
   position: relative;
   margin: 10px 0 0;
@@ -9,7 +14,23 @@ ion-card {
 }
 
 ion-card-header {
-  flex-direction: column;
+  flex-direction: row;
+  padding: 5px 10px;
+  gap: 15px;
+  justify-content: space-between;
+}
+
+ion-card-title {
+  font-size: 20px;
+  line-height: 1.5;
+  margin-block: 0px 12px;
+
+}
+
+.header-info-chip {
+  font-size: 9px;
+  width: 70px;
+  text-align: end;
 }
 
 ion-card-subtitle {
@@ -32,6 +53,36 @@ ion-card-content {
   justify-content: space-between;
 }
 
+.actions-pane {
+
+  flex-direction: column;
+  display: flex;
+  padding-inline: 10px;
+  background: var(--ion-background-color);
+  border-top: 1px solid var(--ion-color-light);
+  align-items: center;
+  gap: 10px;
+  justify-content: flex-end;
+
+  &>ion-button {
+    --border-color: var(--ion-color-light)
+  }
+
+  .go-recipy-btn {
+    white-space: normal;
+    width: min-content;
+    text-transform: lowercase;
+  }
+}
+
+.actions-pane-info {
+  font-size: 10px;
+  line-height: 1.2;
+  display: flex;
+  align-items: normal;
+  gap: 3px;
+}
+
 .overlay {
   position: absolute;
   bottom: -20px;
@@ -43,19 +94,7 @@ ion-card-content {
   padding: 10px;
   opacity: 0.9;
 
-  .actions-pane {
-    position: absolute;
-    bottom: 5px;
-    width: calc(100% - 20px);
-    justify-content: space-evenly;
-    flex-direction: row-reverse;
-    opacity: 0;
-    transition: all 300ms ease-in-out;
 
-    &>ion-button {
-      flex-grow: 1;
-    }
-  }
 
   .overlay-flex-container {
     gap: 20px;
@@ -83,7 +122,7 @@ ion-card-content {
   }
 
   &.visible {
-    height: 45vh;
+    height: 66vh;
     z-index: 2;
     bottom: 0;
 
@@ -145,6 +184,7 @@ ion-card-content {
 
 .big-screen-card {
   height: 550px;
+
   &-background {
     position: absolute;
     width: 100%;
@@ -194,6 +234,31 @@ ion-card-content {
     flex-grow: 1;
   }
 }
+
+.photo-placeholder {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding-inline: 30px;
+}
+
+.humster {
+  opacity: 0.3;
+  height: 45vh;
+}
+
+.steps-block-wrapper {
+  padding: 15px;
+  background: var(--ion-color-tertiary);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  overflow-y: auto;
+}
+
 
 @media (orientation: landscape) and (max-width: 1600px) {
   ::ng-deep app-recipies .big-screen-card-content {
