--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.scss
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.scss
@@ -1,13 +1,17 @@
 .recipy-selection-result {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+
     font-size: 14px;
     padding: 10px 0;
 
     .recipy-selection-section {
-        padding: 0;
+        padding: 6px 0;
         display: flex;
         gap: 5px;
+
+        &.active {
+            font-weight: bold;
+        }
     }
 }
