--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-select-date/recipy-in-calendar-select-date.component.html
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-select-date/recipy-in-calendar-select-date.component.html
@@ -1,5 +1,7 @@
-<ion-datetime size="cover" color="primary" [value]="value" (ionChange)="onSelectionChanged($event)"></ion-datetime>
-<div>
-  <div>Shortcuts:</div>
+<ion-datetime size="cover" color="primary" [value]="value" (ionChange)="onSelectionChanged($event)">
+  <div slot="time-label">Година:</div>
+</ion-datetime>
+<div class="shortcuts">
+
   <ion-chip *ngFor="let item of (timeShortcuts$ | async)" (click)="changeTime(item)">{{item}}</ion-chip>
 </div>
