--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
@@ -11,6 +11,7 @@ ion-card {
   height: 75vh;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 ion-card-header {
@@ -18,6 +19,7 @@ ion-card-header {
   padding: 5px 10px;
   gap: 15px;
   justify-content: space-between;
+  width: 100%;
 }
 
 ion-card-title {
@@ -243,6 +245,10 @@ ion-card-content {
   align-items: center;
   gap: 20px;
   padding-inline: 30px;
+
+  &-text {
+    text-align: center
+  }
 }
 
 .humster {
