--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
@@ -69,7 +69,7 @@
     </ng-container>
 
     <ng-container *ngIf="currentView === AddRecipyToCalView.SelectDate">
-      <app-recipy-in-calendar-select-date [initialValue]="selectedTime?.toISOString()"
+      <app-recipy-in-calendar-select-date [initialValue]="initialSelectDate"
         (valueChanged)="onDateChanged($event)"></app-recipy-in-calendar-select-date>
           </ng-container>
 
