--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -8,7 +8,7 @@
     </app-multiple-dates-picker-modal>
     <app-products-per-day></app-products-per-day>
     <ion-button id="open-add-action-sheet"><ion-icon name="add-circle-outline"></ion-icon></ion-button>
-    <ion-action-sheet trigger="open-add-action-sheet" header="Виберіть що потрібно додати:"
+    <ion-action-sheet trigger="open-add-action-sheet" header="Додати:"
       [buttons]="actionSheetButtons" (didDismiss)="onActionSelected($event)"></ion-action-sheet>
 
   </div>
