--- a/src/app/pages/calendar/components/products-per-day/products-per-day.component.html
+++ b/src/app/pages/calendar/components/products-per-day/products-per-day.component.html
@@ -1,4 +1,4 @@
-<ion-button id="open-modal" [disabled]="!(recipies$ | async)?.length"><ion-icon name="restaurant-outline"></ion-icon></ion-button>
+<ion-button id="open-modal" [disabled]="!(recipies$ | async)?.length"><ion-icon name="bag-handle-outline"></ion-icon></ion-button>
 
 <ion-modal trigger="open-modal" [initialBreakpoint]="0.75" [breakpoints]="[0.25, 0.5, 0.75, 1]">
   <ng-template>
